writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/no_function_calls/division.c
 
int f(int a, int b, int c, int d) {
    
    int x = a / b;
    
    if (a == 10 && b == 2 && c == 100 && d == 4 && x == 5)
        return 1;
    return 0;
}