writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/redefine_fun_as_var.c
int main(void) {
   
    int foo(void);
    int foo = 1;
    return foo;
}

int foo(void) {
    return 1;
}